added styles to make form look sectioned

--- a/MC10ExpenseApp/src/index.css
+++ b/MC10ExpenseApp/src/index.css
@@ -1,6 +1,17 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+
+
 body {
   background-color: rgb(48, 56, 56);
   color:whitesmoke;
+
+  /* Fonts */
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style:normal;
+  font-size:x-large;
 }
 
 .flexCont {
@@ -17,8 +28,19 @@ body {
   border-color: whitesmoke;
 }
 
-.formStyle {
-  /* background-color: #212529; */
+.mainCont {
+  background-color: #578296;
+  border-radius: 2rem;
+  margin-top: 6%;
+  padding: 1rem;
+}
+
+.formCont {
+  background-color: #27363d;
+  margin-bottom: 1rem;
+  padding: 2rem;
+  border-radius: 1rem;
+  /* opacity: 80%; */
 }
 
 .dataStyle {
@@ -33,6 +55,7 @@ body {
 thead {
   font-size: larger;
 }
+
 
 /* tfoot {
   background-color: #656b70 !important;
